--- a/index.html
+++ b/index.html
@@ -1,78 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/index.css" rel="stylesheet" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <section class="social-media p-2">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-6">
-              <i class="bi bi-twitter pe-2" style="color: #fff"></i>
-              <i class="bi bi-facebook pe-2" style="color: #fff"></i>
-              <i class="bi bi-globe2 pe-2" style="color: #fff;"></i>
-              <i class="bi bi-skype" style="color: #fff;"></i>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="index.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="social-media p-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 text-center text-md-start">
+          <i class="bi bi-twitter pe-2" style="color: #fff"></i>
+          <i class="bi bi-facebook pe-2" style="color: #fff"></i>
+          <i class="bi bi-globe2 pe-2" style="color: #fff;"></i>
+          <i class="bi bi-skype" style="color: #fff;"></i>
+        </div>
+        <div class="col-12 col-md-6 text-center text-md-end text-white">
+          Welcome to FINOR joomla template...
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-3 col-sm-12 text-center text-md-start">
+          <img src="images/Finor.JPG" class="finor-img">
+        </div>
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-12 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
+          <div class="call-icon">
+            <i class="bi bi-telephone-fill"></i>
           </div>
-          <div class="col-12 col-md-6 text-end text-white">
-            Welcome to FINOR joomla template...
+          <div class="border-end pe-2">
+            <span class="phn-no">+0123456789012</span>
+            <span class="email"><a href="www.gmail.com">info@gmail.com</a></span>
+          </div>
+        </div>
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
+          <div class="email-icon">
+            <i class="bi bi-envelope-arrow-down-fill"></i>
+          </div>
+          <div>
+            <span class="address">150 Son Lane Area, Angeles, CA 9017</span>
+          </div>
+        </div>
+        <div
+          class="col-lg-2 col-md-3 col-sm-12 d-flex align-items-center gap-3 justify-content-center justify-content-md-start pb-3 pb-md-0">
+          <div class="search-icon">
+            <i class="bi bi-search" style="color: #fff;"></i>
+          </div>
+          <div class="lock">
+            <i class="bi bi-lock-fill" style="color: #fff;"></i>
+          </div>
+          <div class="cart">
+            <i class="bi bi-cart-fill" style="color: #fff;"></i>
           </div>
         </div>
       </div>
-    </section>
-    <section class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="/images/Finor.JPG" class="finor-img">
-                </div>
-                <div class="col-md-2 d-flex align-items-center gap-3">
-                    <div class="call-icon">
-                        <i class="bi bi-telephone-fill"></i>
-                    </div>
-                    <div class="border-end">
-                        <span class="phn-no">+0123456789012</span>
-                        <span class="email"><a href="www.gmail.com">info@gmail.com</a></span>
-                    </div>
-                </div>
-                <div class="col-md-2 d-flex align-items-center gap-3">
-                    <div class="email-icon">
-                        <i class="bi bi-envelope-arrow-down-fill"></i>
-                    </div>
-                    <div>
-                        <span class="address">150 Son Lane Area, Angeles, CA 9017</span>
-                    </div>
-                </div>
-                <div class="col-md-2 d-flex align-items-center gap-3">
-                    <div class="search-icon">
-                        <i class="bi bi-search" style="color: #fff;"></i>
-                    </div>
-                    <div class="lock">
-                        <i class="bi bi-lock-fill" style="color: #fff;"></i>
-                    </div>
-                    <div class="cart">
-                        <i class="bi bi-cart-fill" style="color: #fff;"></i>
-                    </div>
-                </div>
-            </div>
+    </div>
+  </section>
+  <section class="nevbar-sec">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 nav-top"></div>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light ps-5 pe-5 pt-0 pb-0">
+        <div class="container-fluid">
+
+
+          <!-- Toggler button -->
+          <button class="navbar-toggler mt-2 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Navbar links -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#" id="home-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </section>
-    <script src="/index.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      </nav>
+
+    </div>
+  </div>
+</section>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
