--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#" id="home-link">Home</a>
+                <a class="nav-link active" href="#" id="home-link"><i class="bi bi-house-fill"></i> Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#"><i class="bi bi-file-person-fill"></i> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#"><i class="bi bi-telephone-fill"></i> Contact</a>
               </li>
             </ul>
           </div>
