--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-12 nav-top"></div>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light ps-5 pe-5 pt-0 pb-0">
+      <nav class="navbar navbar-expand-md navbar-light ps-5 pe-5 pt-0 pb-0">
         <div class="container-fluid">
 
 
@@ -92,6 +92,12 @@
                 <a class="nav-link" href="#"><i class="bi bi-file-person-fill"></i> About</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-substack"></i> Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="bi bi-gear-fill"></i> Service</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#"><i class="bi bi-telephone-fill"></i> Contact</a>
               </li>
             </ul>
@@ -99,6 +105,73 @@
         </div>
       </nav>
 
+    </div>
+  </div>
+</section>
+<section class="purchase">
+  <div class="container">
+    <div class="row">
+      <div class="col-5"></div>
+      <div class="col-7 features d-flex flex-column ps-5">
+        <span class="feature-txt">Advanced features & usability</span>
+        <span class="financial-txt">MAINTAIN, FINANCIAL FLOW AND INVEST WISELY</span>
+        <div class="mt-3 btn-container">
+          <button type="button" class="btn btn-primary me-2">PURCHAASE NOW</button>
+          <button type="button" class="btn btn-light">PURCHAASE NOW</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="banner">
+  <div class="container">
+    <div class="row">
+        <div class="col-12 banner-img"></div>
+    </div>
+  </div>
+</section>
+<section class="cards">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-4 p-3">
+        <div class="card1 bg-md-white bg-light d-flex justify-content-center">
+          <div class="card-content">
+            <p>Growth of Industriel</p>
+            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+          </div>
+            <img class="card-image" src="images/building.JPG">
+        </div>
+      </div>
+      <div class="col-12 col-md-4 p-3">
+        <div class="card2 bg-md-white bg-light d-flex justify-content-center">
+          <div class="card-content">
+            <p>Growth of Industriel</p>
+            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+          </div>
+            <img class="card-image" src="images/building.JPG">
+        </div>
+      </div>
+      <div class="col-12 col-md-4 p-3">
+        <div class="card3 bg-md-white bg-light d-flex justify-content-center">
+          <div class="card-content">
+            <p>Growth of Industriel</p>
+            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+          </div>
+            <img class="card-image" src="images/building.JPG">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="aboutus mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <p class="company">OUR COMPANY</p>
+      </div>
+      <div class="col-md-8">
+        <p class="company-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
+      </div>
     </div>
   </div>
 </section>
