--- a/index.html
+++ b/index.html
@@ -68,113 +68,158 @@
     </div>
   </section>
   <section class="nevbar-sec">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 nav-top"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 nav-top"></div>
 
-      <nav class="navbar navbar-expand-md navbar-light ps-5 pe-5 pt-0 pb-0">
-        <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-light ps-5 pe-5 pt-0 pb-0">
+          <div class="container-fluid">
 
 
-          <!-- Toggler button -->
-          <button class="navbar-toggler mt-2 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <!-- Toggler button -->
+            <button class="navbar-toggler mt-2 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <!-- Navbar links -->
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#" id="home-link"><i class="bi bi-house-fill"></i> Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-file-person-fill"></i> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-substack"></i> Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-gear-fill"></i> Service</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-telephone-fill"></i> Contact</a>
-              </li>
-            </ul>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#" id="home-link"><i class="bi bi-house-fill"></i> Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="about-link" href="#about"><i class="bi bi-file-person-fill"></i> About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-substack"></i> Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-gear-fill"></i> Service</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-telephone-fill"></i> Contact</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
 
+      </div>
     </div>
-  </div>
-</section>
-<section class="purchase">
-  <div class="container">
-    <div class="row">
-      <div class="col-5"></div>
-      <div class="col-7 features d-flex flex-column ps-5">
-        <span class="feature-txt">Advanced features & usability</span>
-        <span class="financial-txt">MAINTAIN, FINANCIAL FLOW AND INVEST WISELY</span>
-        <div class="mt-3 btn-container">
-          <button type="button" class="btn btn-primary me-2">PURCHAASE NOW</button>
-          <button type="button" class="btn btn-light">PURCHAASE NOW</button>
+  </section>
+  <section class="purchase">
+    <div class="container">
+      <div class="row">
+        <div class="col-5"></div>
+        <div class="col-7 features d-flex flex-column ps-5">
+          <span class="feature-txt">Advanced features & usability</span>
+          <span class="financial-txt">MAINTAIN, FINANCIAL FLOW AND INVEST WISELY</span>
+          <div class="mt-3 btn-container">
+            <button type="button" class="btn btn-primary me-2">PURCHAASE NOW</button>
+            <button type="button" class="btn btn-light">PURCHAASE NOW</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="banner">
-  <div class="container">
-    <div class="row">
+  </section>
+  <section class="banner">
+    <div class="container">
+      <div class="row">
         <div class="col-12 banner-img"></div>
-    </div>
-  </div>
-</section>
-<section class="cards">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-4 p-3">
-        <div class="card1 bg-md-white bg-light d-flex justify-content-center">
-          <div class="card-content">
-            <p>Growth of Industriel</p>
-            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
-          </div>
-            <img class="card-image" src="images/building.JPG">
-        </div>
-      </div>
-      <div class="col-12 col-md-4 p-3">
-        <div class="card2 bg-md-white bg-light d-flex justify-content-center">
-          <div class="card-content">
-            <p>Growth of Industriel</p>
-            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
-          </div>
-            <img class="card-image" src="images/building.JPG">
-        </div>
-      </div>
-      <div class="col-12 col-md-4 p-3">
-        <div class="card3 bg-md-white bg-light d-flex justify-content-center">
-          <div class="card-content">
-            <p>Growth of Industriel</p>
-            <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
-          </div>
-            <img class="card-image" src="images/building.JPG">
-        </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="aboutus mt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <p class="company">OUR COMPANY</p>
-      </div>
-      <div class="col-md-8">
-        <p class="company-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
+  </section>
+  <section class="cards">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-4 p-3">
+          <div class="card1 bg-md-white bg-light d-flex justify-content-center">
+            <div class="card-content">
+              <p>Growth of Industriel</p>
+              <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+            </div>
+            <img class="card-image" src="images/building.JPG">
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-3">
+          <div class="card2 bg-md-white bg-light d-flex justify-content-center">
+            <div class="card-content">
+              <p>Growth of Industriel</p>
+              <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+            </div>
+            <img class="card-image" src="images/building.JPG">
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-3">
+          <div class="card3 bg-md-white bg-light d-flex justify-content-center">
+            <div class="card-content">
+              <p>Growth of Industriel</p>
+              <span>Sed ut perspiciatis unde omnis iste natus error sit...</span>
+            </div>
+            <img class="card-image" src="images/building.JPG">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <section id="about" class="aboutus mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p class="company">OUR COMPANY</p>
+        </div>
+        <div class="col-md-8">
+          <p class="company-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
+        </div>
+        <div class="col-md-4 mt-5 text-center text-sm-start">
+          <img src="images/aboutus-img.PNG" alt="">
+          <p class="about-company mt-4">ABOUT US</p>
+          <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
+          <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa quibusdam amet eos nostrum. Consequatur, accusamus.</p>
+        </div>
+        <div class="col-md-4 mt-5 ps-5">
+          <div class="d-flex">
+            <div class="book-icon">
+              <i class="bi bi-journal-text fs-1"></i>
+            </div>
+            <div class="ps-3">
+              <p class="about-company">DIVERSITY</p>
+              <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa.</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="book-icon">
+              <i class="bi bi-eye-fill fs-1"></i>
+            </div>
+            <div class="ps-3">
+              <p class="about-company">TRANSPARENCY</p>
+              <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa.</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="book-icon">
+              <i class="bi bi-hourglass-split fs-1"></i>
+            </div>
+            <div class="ps-3">
+              <p class="about-company">INTEGRITY</p>
+              <p class="company-txt mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem ratione quas
+            accusantium aperiam culpa.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mt-5 text-center text-sm-start">
+          <img src="images/ship.PNG" alt="">
+          <img class="mt-5" src="images/ship.PNG" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
